--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <p>Need a website? Wanna chat? Use the contact button or check out the links below!</p>
+      <h2 class="in-touch">Get In Touch</h2>
+      <p>Need a website? Wanna chat? Use the contact button or check out the links below:</p>
       <a class="btn" href="mailto:jszaflarskidev@outlook.com">CONTACT ME</a>
     </div>
   </div>
