--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-pic" src="images/alien.png" alt="profile-pic">
       <h2>Hello.</h2>
-      <p>I am an Web Developer and sometimes make Android Apps/Games. I have a pretty cool tea addiction.</p>
+      <p>I am an Web Developer and sometimes make Android Apps/Games.</p>
     </div>
     <hr>
     <div class="skills">
